<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TopQuotes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string-array name="navigation_drawer_const_item">
       
        <item >&gt;&gt;&gt; Quote stream</item>
        <item >&gt;&gt;&gt;	Quiz</item>
        <item >&gt;&gt;&gt; Top favorites</item>
        <item >&gt;&gt;&gt; Slide quote</item>
         <item >&gt;&gt;&gt; Profile</item>
    </string-array>
    <string name="progress_dialog_title">Connection</string>
  	<string name="progress_dialog_msg">Quotes loading</string>
  	<string name="frag_quiz_lb_score">Score:</string>
  	<string name="frag_quiz_score_default">0</string>
  	<string name="frag_quiz_lb_lives">"Lives: "</string>
  	<string-array name="check_languages">
  	    <item >Russian</item>
  		<item >English</item>
  	</string-array>
  		<string name="action_add_quote">Add new quote</string>
  		<string name="add_quote_sp_title_Enter_title">Enter title</string>
  			<string name="add_quote_sp_title_selected_title">Selected title: </string>
  		<string name="add_quote_lb_title">Title name*:</string>
  		<string name="add_quote_ed_title_hint">Enter full title name</string>
  		<string name="add_quote_lb_text">Quote text*:</string>
  		<string name="add_quote_ed_text_hint">Enter quote with author\'s name</string>
  		<string name="add_quote_lb_num_season">Number of the season:</string>
  		<string name="add_quote_lb_num_series">Number of the series:</string>
  		<string name="add_quote_lb_language">Language of the quote</string>
  		<string name="add_quote_btn">Add new quote</string>
  		
  		<string name="add_quote_dlg_conf_title">Confirm</string>
  		<string name="add_quote_dlg_conf_msg">Are you sure?</string>
  		<string name="add_quote_dlg_conf_btn_cancel">No, cancel</string>
  		<string name="add_quote_dlg_conf_btn_ok">Yes, add quote</string>
  		
  		<string name="add_quote_dlg_thanks_title">Thanks for you quote :)</string>
  		<string name="add_quote_dlg_thanks_msg">This quote are added in our database, you will see it in quote stream after moderate. Want to add one more? </string>
  		<string name="add_quote_dlg_thanks_btn_cancel">No</string>
  		<string name="add_quote_dlg_thanks_btn_ok">Yes, add one more</string>
  		
  		<string name="add_quote_dlg_conf_fail_input">all field must be filled</string>
  		
  		<string name="list_stream_lb_num_season">"Seasone: "</string>
  		
  		<string name="action_profile">Profile</string>
  		
  		<string name="act_profile_btn_SignQut">Sign out</string>
  		
  		<string name="act_prof_lb_user_name">Name:</string>
  		
  		<string name="act_prof_lb_user_email">"Email: "</string>
  		
  		<string name="act_profile_lb_published_quotes">"Published quotes: "</string>
  		
  		<string name="act_prof_lb_published_quotes">"Published quotes: "</string>
  		
  		<string name="dialog_quize_lb_top_ten_players">"Top ten players: "</string>
  		
  		<string name="dialog_quize_lb_ur_record">"Your record: "</string>
  		
  		<string name="dialog_quize_lb_ur_current_score">"Your current score: "</string>
  		
  		<string name="dialog_quize_congratulations">Congratulations u have a new record :)</string>
  		<string name="dialog_quize_posetive_btn_restart_game">Restart game</string>
  		<string name="dialog_quize_progress_title">Progress</string>
  		<string name="dialog_quize_download_records_message">Download records...</string>
  		<string name="share_util_title">Title: </string>
  		<string name="share_util_season">Season: </string>
  		<string name="share_util_series">Series: </string>
  		<string name="share_util_published_from_app">Published from : </string>
</resources>
