<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/quiz_layout_panding" >

    <TextView
        android:id="@+id/tvAddQuoteLbTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_quote_lb_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/spAddQuoteTitleName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/edAddQuoteTitleName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/add_quote_ed_title_hint" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvAddQuoteLbText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_quote_lb_text" />

    <EditText
        android:id="@+id/edAddQuoteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_quote_ed_text_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvAddQuoteLbNumSeason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_quote_lb_num_season" />

        <EditText
            android:id="@+id/edAddQuoteNumSeason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvAddQuoteLbNumSeries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_quote_lb_num_series" />

        <EditText
            android:id="@+id/edAddQuoteNumSeries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvAddQuoteLbLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_quote_lb_language" />

        <Spinner
            android:id="@+id/spAddQuoteLanguages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAddQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_quote_btn" />

</LinearLayout>
