<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/quiz_layout_panding" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ivProfileAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:maxHeight="200dp"
                android:maxWidth="200dp"
                android:src="@drawable/ic_test_av" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/tvProfileLbUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/act_prof_lb_user_name" />

                    <TextView
                        android:id="@+id/tvProfileUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/tvProfileLbUserEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/act_prof_lb_user_email" />

                    <TextView
                        android:id="@+id/tvProfileUserEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvProfileLbPublishedQuotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/act_prof_lb_published_quotes" />

                <TextView
                    android:id="@+id/tvProfilePublishedQuotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="TextView" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <Button
                        android:id="@+id/btnProfileSignOut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/act_profile_btn_SignQut" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <ListView
            android:id="@+id/lvProfileQuotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

    </RelativeLayout>

</LinearLayout>
