<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/quiz_layout_panding" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <TextView
                android:id="@+id/tvQuizLbScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frag_quiz_lb_score" />

            <TextView
                android:id="@+id/tvQuizScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frag_quiz_score_default" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tvQuizQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="quote text" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <TextView
                android:id="@+id/tvQuizLbLives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frag_quiz_lb_lives" />

            <TextView
                android:id="@+id/tvQuizLivesCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />

            <TextView
                android:id="@+id/tvQuizLivesSlesh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/" />

            <TextView
                android:id="@+id/tvQuizLivesPeak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnQuizPickOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Pick one" />

            <Button
                android:id="@+id/btnQuizPickTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Pick two" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnQuizPickThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Pick three" />

            <Button
                android:id="@+id/btnQuizePickFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Pick four" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
