<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialog_quize_panding" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tvQuizeDialogLbToptenPlayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/dialog_quize_lb_top_ten_players" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/lvQuizeDialogToptenPlayers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dialog_quize_top_panding"
        android:layout_weight="4"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvQuizeDialogLbUrRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_quize_lb_ur_record" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" >

                <TextView
                    android:id="@+id/tvQuizeDialogUrrecordDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="date" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4" >

                <TextView
                    android:id="@+id/tvQuizeDialogUrrecordUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="name" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" >

                <TextView
                    android:id="@+id/tvQuizeDialogUrrecordScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="score" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvQuizeDialogLbUrCurrentScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_quize_lb_ur_current_score" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </RelativeLayout>
<RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" >

                <TextView
                    android:id="@+id/tvQuizeDialogCurrentDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="date" />
            </RelativeLayout>
<RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4" >

                <TextView
                    android:id="@+id/tvQuizeDialogCurrentUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="name" />
            </RelativeLayout>
<RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" >

                <TextView
                    android:id="@+id/tvQuizeDialogCurrentScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="score" />
            </RelativeLayout>
            
            
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvQuizeDialogCongratulations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
